commit on nov 8th

--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,7 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.dreamorbit.scripts.JsonDownloadCheck.jsonDownloadCheck</td></tr>
+<tr><td>com.dreamorbit.scripts.JsonDownloadValidSkey.jsonDownloadCheck</td></tr>
+<tr><td>com.dreamorbit.scripts.JsonDownloadInvalidSkey.jsonDownloadInvalidSkey</td></tr>
+<tr><td>com.dreamorbit.scripts.TestValidLogin.testValidlogin</td></tr>
+<tr><td>com.dreamorbit.scripts.TestResetPasswordValid.rstpwdVerification</td></tr>
+<tr><td>com.dreamorbit.scripts.TestInvalidLogin.testInvalidlogin</td></tr>
 </table>
