--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>Reset password testcase with valid data is passed</td></tr>
-<tr><td>RowCount=3</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>The TestCase is passed</td></tr>
+<h2>Reporter output</h2><table><tr><td>invalidkey input counts =3</td></tr>
+<tr><td>Invalid key</td></tr>
+<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
+<tr><td>Invalid key</td></tr>
+<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
+<tr><td>Invalid key</td></tr>
+<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
 </table>
