commit on nov 11

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37,006</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">38,929</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.JsonDownloadInvalidSkey</td><td><a href="#m0">jsonDownloadIncorrectSkey</a></td><td rowspan="1">1573217681340</td><td rowspan="1">28691</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck</td><td><a href="#m0">totalParticipantNavigationCheck</a></td><td rowspan="1">1573410919065</td><td rowspan="1">21117</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.dreamorbit.scripts.JsonDownloadInvalidSkey#jsonDownloadIncorrectSkey</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">invalidkey input counts =3<br/>Invalid key<br/>Json Download testcase with incorrect symmetric key is passed<br/>Invalid key<br/>Json Download testcase with incorrect symmetric key is passed<br/>Invalid key<br/>Json Download testcase with incorrect symmetric key is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck#totalParticipantNavigationCheck</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">TotalParticipant Navigation Check testcase is passed<br/>TotalResearcher Navigation Check testcase is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
