--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\DreamProject\PortalStanford\Workspace\PortalStanford\testng.xml</span>
+                    <span>C:\Users\vishr\Documents\DreamProject\Workspace\DreamStanford\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.dreamorbit.scripts.JsonDownloadInvalidSkey" hash-for-method="jsonDownloadIncorrectSkey">jsonDownloadIncorrectSkey</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck" hash-for-method="totalParticipantNavigationCheck">totalParticipantNavigationCheck</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dreamorbit.scripts.JsonDownloadInvalidSkey</span>
+              <span class="class-name">com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="jsonDownloadIncorrectSkey">
-                  </a> <!-- jsonDownloadIncorrectSkey -->
-                  <span class="method-name">jsonDownloadIncorrectSkey</span>
+                  <a name="totalParticipantNavigationCheck">
+                  </a> <!-- totalParticipantNavigationCheck -->
+                  <span class="method-name">totalParticipantNavigationCheck</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,20 +135,25 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\DreamProject\PortalStanford\Workspace\PortalStanford\testng.xml</span>
+            <span class="header-content">C:\Users\vishr\Documents\DreamProject\Workspace\DreamStanford\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dreamorbit.scripts.TestInvalidLogin&quot;/&gt;
-      &lt;class name=&quot;com.dreamorbit.scripts.JsonDownloadInvalidSkey&quot;/&gt;
-      &lt;class name=&quot;com.dreamorbit.scripts.JsonDownloadValidSkey&quot;/&gt;
-      &lt;class name=&quot;com.dreamorbit.scripts.TestValidLogin&quot;/&gt;
       &lt;class name=&quot;com.dreamorbit.scripts.TestResetPasswordValid&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.ForgotPasswordCheck&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.JsonDownloadInvalidSkey&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.AddResearcherCheck&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.VerifyTokenToggleBTN&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.TestInvalidLogin&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.TestValidLogin&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.JsonDownloadValidSkey&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.NavigationCheckOnDrawerOptions&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -162,7 +167,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (5 classes)</span>
+                <span class="test-name">Test (10 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,14 +195,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'jsonDownloadIncorrectSkey')
-data.setCell(0, 2, 'com.dreamorbit.scripts.JsonDownloadInvalidSkey')
-data.setCell(0, 3, 28691);
+data.setCell(0, 1, 'totalParticipantNavigationCheck')
+data.setCell(0, 2, 'com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck')
+data.setCell(0, 3, 21117);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -209,42 +214,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">jsonDownloadIncorrectSkey</span>
+              <span class="reporter-method-name">totalParticipantNavigationCheck</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">invalidkey input counts =3</span>
-                <span class="reporter-method-output">Invalid key</span>
-                <span class="reporter-method-output">Json Download testcase with incorrect symmetric key is passed</span>
-                <span class="reporter-method-output">Invalid key</span>
-                <span class="reporter-method-output">Json Download testcase with incorrect symmetric key is passed</span>
-                <span class="reporter-method-output">Invalid key</span>
-                <span class="reporter-method-output">Json Download testcase with incorrect symmetric key is passed</span>
+                <span class="reporter-method-output">TotalParticipant Navigation Check testcase is passed</span>
+                <span class="reporter-method-output">TotalResearcher Navigation Check testcase is passed</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">5 ignored methods</span>
+            <span class="header-content">14 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dreamorbit.scripts.TestResetPasswordValid</span>
+              <span class="ignored-class-name">com.dreamorbit.scripts.NavigationCheckOnDrawerOptions</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">rstpwdVerification</span>
+                <span class="ignored-method-name">navigationFlowCheck</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dreamorbit.scripts.JsonDownloadInvalidSkey</span>
+              <span class="ignored-class-name">com.dreamorbit.scripts.TestValidLogin</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">jsonDownloadInvalidSkey</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dreamorbit.scripts.TestInvalidLogin</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testInvalidlogin</span>
+                <span class="ignored-method-name">testValidlogin</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -256,9 +249,54 @@ return data;
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dreamorbit.scripts.TestValidLogin</span>
+              <span class="ignored-class-name">com.dreamorbit.scripts.TestInvalidLogin</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">testValidlogin</span>
+                <span class="ignored-method-name">testInvalidlogin</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dreamorbit.scripts.ForgotPasswordCheck</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">forgotPwdTologinNavigationChk</span>
+                <br/>
+                <span class="ignored-method-name">ForgotPWDNavigationFlowCheck</span>
+                <br/>
+                <span class="ignored-method-name">forgotPasswordInValid</span>
+                <br/>
+                <span class="ignored-method-name">forgotPasswordValid</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dreamorbit.scripts.AddResearcherCheck</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">AddResearcherCheckInValid</span>
+                <br/>
+                <span class="ignored-method-name">AddResearcherCheckValid</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dreamorbit.scripts.VerifyTokenToggleBTN</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">VerifyTokenCheck</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dreamorbit.scripts.JsonDownloadInvalidSkey</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">jsonDownloadInvalidSkey</span>
+                <br/>
+                <span class="ignored-method-name">jsonDownloadIncorrectSkey</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dreamorbit.scripts.TestResetPasswordValid</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">rstpwdVerification</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -270,18 +308,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dreamorbit.scripts.JsonDownloadInvalidSkey</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchAPP</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">jsonDownloadIncorrectSkey</span>
-                <span class="method-start">7665 ms</span>
+                <span class="method-name">totalParticipantNavigationCheck</span>
+                <span class="method-start">17066 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeApp</span>
-                <span class="method-start">36359 ms</span>
+                <span class="method-start">38187 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
