--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6068">  <td>19/11/08 18:24:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.JsonDownloadInvalidSkey@6ebc05a6]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="a2a371">  <td>19/11/08 18:24:41</td>   <td>7662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JsonDownloadInvalidSkey.jsonDownloadIncorrectSkey()[pri:6, instance:com.dreamorbit.scripts.JsonDownloadInvalidSkey@6ebc05a6]">jsonDownloadIncorrectSkey</td> 
-  <td>main@1863932867</td>   <td></td> </tr>
-<tr bgcolor="7d6068">  <td>19/11/08 18:25:10</td>   <td>36356</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.JsonDownloadInvalidSkey@6ebc05a6]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1863932867</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/11/11 00:05:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/11/11 00:05:19</td>   <td>17066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LabelOptionsNavigationFlowCheck.totalParticipantNavigationCheck()[pri:14, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">totalParticipantNavigationCheck</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="eff760">  <td>19/11/11 00:05:40</td>   <td>38187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
 </table>
