--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,8 +1,3 @@
-<h2>Reporter output</h2><table><tr><td>invalidkey input counts =3</td></tr>
-<tr><td>Invalid key</td></tr>
-<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
-<tr><td>Invalid key</td></tr>
-<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
-<tr><td>Invalid key</td></tr>
-<tr><td>Json Download testcase with incorrect symmetric key is passed</td></tr>
+<h2>Reporter output</h2><table><tr><td>TotalParticipant Navigation Check testcase is passed</td></tr>
+<tr><td>TotalResearcher Navigation Check testcase is passed</td></tr>
 </table>
