--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -4,13 +4,15 @@
 <tr><td>com.dreamorbit.scripts.JsonDownloadInvalidSkey.jsonDownloadIncorrectSkey</td></tr>
 <tr><td>com.dreamorbit.scripts.AddResearcherCheck.AddResearcherCheckInValid</td></tr>
 <tr><td>com.dreamorbit.scripts.NavigationCheckOnDrawerOptions.navigationFlowCheck</td></tr>
+<tr><td>com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck.totalParticipantNavigationCheck</td></tr>
 <tr><td>com.dreamorbit.scripts.JsonDownloadValidSkey.jsonDownloadCheck</td></tr>
 <tr><td>com.dreamorbit.scripts.ForgotPasswordCheck.forgotPwdTologinNavigationChk</td></tr>
 <tr><td>com.dreamorbit.scripts.JsonDownloadInvalidSkey.jsonDownloadInvalidSkey</td></tr>
 <tr><td>com.dreamorbit.scripts.ForgotPasswordCheck.ForgotPWDNavigationFlowCheck</td></tr>
 <tr><td>com.dreamorbit.scripts.ForgotPasswordCheck.forgotPasswordInValid</td></tr>
 <tr><td>com.dreamorbit.scripts.TestResetPasswordValid.rstpwdVerification</td></tr>
-<tr><td>com.dreamorbit.scripts.AddResearcherCheck.AddResearcherCheckValid</td></tr>
+<tr><td>com.dreamorbit.scripts.LogoutVerification.verifyLogout</td></tr>
 <tr><td>com.dreamorbit.scripts.VerifyTokenToggleBTN.VerifyTokenCheck</td></tr>
+<tr><td>com.dreamorbit.scripts.TestSearchResearcher.searchValid</td></tr>
 <tr><td>com.dreamorbit.scripts.TestInvalidLogin.testInvalidlogin</td></tr>
 </table>
