--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eff760">  <td>19/11/11 00:05:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>19/11/11 00:05:19</td>   <td>17066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LabelOptionsNavigationFlowCheck.totalParticipantNavigationCheck()[pri:14, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">totalParticipantNavigationCheck</td> 
-  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/11/11 00:05:40</td>   <td>38187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@1bce4f0a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>19/11/11 17:23:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="85b2fe">  <td>19/11/11 17:23:58</td>   <td>8120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckValid()[pri:12, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">AddResearcherCheckValid</td> 
+  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>19/11/11 17:24:14</td>   <td>23710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
 </table>
