--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,3 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>TotalParticipant Navigation Check testcase is passed</td></tr>
-<tr><td>TotalResearcher Navigation Check testcase is passed</td></tr>
+<h2>Reporter output</h2><table><tr><td>RowCount=3</td></tr>
 </table>
