--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -13,6 +13,6 @@
 <tr><td>com.dreamorbit.scripts.TestResetPasswordValid.rstpwdVerification</td></tr>
 <tr><td>com.dreamorbit.scripts.LogoutVerification.verifyLogout</td></tr>
 <tr><td>com.dreamorbit.scripts.VerifyTokenToggleBTN.VerifyTokenCheck</td></tr>
-<tr><td>com.dreamorbit.scripts.TestSearchResearcher.searchValid</td></tr>
+<tr><td>com.dreamorbit.scripts.AddResearcherCheck.AddResearcherCheckValid</td></tr>
 <tr><td>com.dreamorbit.scripts.TestInvalidLogin.testInvalidlogin</td></tr>
 </table>
