--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,2 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>RowCount=3</td></tr>
+<h2>Reporter output</h2><table><tr><td>Researcher exact Search test case with existing data is passed</td></tr>
+<tr><td>auto111</td></tr>
+<tr><td>Researcher partial Search test case with existing data is passed</td></tr>
+<tr><td>Clear button functionality in researcher search- testcase is passed </td></tr>
+<tr><td>No such Researcher as *****</td></tr>
+<tr><td>Researcher Search testcase with  non existing data is passed</td></tr>
+<tr><td>Functional verification of Participant link under Actions testcase is  passed</td></tr>
 </table>
