--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f777e8">  <td>19/11/11 17:23:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="85b2fe">  <td>19/11/11 17:23:58</td>   <td>8120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckValid()[pri:12, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">AddResearcherCheckValid</td> 
-  <td>main@917819120</td>   <td></td> </tr>
-<tr bgcolor="f777e8">  <td>19/11/11 17:24:14</td>   <td>23710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@4973813a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>19/11/12 21:47:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="af90ec">  <td>19/11/12 21:48:02</td>   <td>8061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchResearcher.searchResearcherValid()[pri:18, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">searchResearcherValid</td> 
+  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>19/11/12 21:49:05</td>   <td>70699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>19/11/12 21:49:06</td>   <td>71334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="ebc39e">  <td>19/11/12 21:49:15</td>   <td>80481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParticipantsLinkNavigationCheck.testValidlogin()[pri:19, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">testValidlogin</td> 
+  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="686d7f">  <td>19/11/12 21:49:26</td>   <td>91792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
 </table>
