nov 15 from office

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">92,467</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,393</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.ParticipantsLinkNavigationCheck</td><td><a href="#m0">testValidlogin</a></td><td rowspan="1">1573575555276</td><td rowspan="1">11309</td></tr><tr class="passedodd"><td rowspan="1">com.dreamorbit.scripts.TestSearchResearcher</td><td><a href="#m1">searchResearcherValid</a></td><td rowspan="1">1573575482856</td><td rowspan="1">62636</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.AddResearcherCheck</td><td><a href="#m0">AddResearcherCheckInValid</a></td><td rowspan="1">1573824848292</td><td rowspan="1">30654</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.dreamorbit.scripts.ParticipantsLinkNavigationCheck#testValidlogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Functional verification of Participant link under Actions testcase is  passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.dreamorbit.scripts.TestSearchResearcher#searchResearcherValid</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Researcher exact Search test case with existing data is passed<br/>auto111<br/>Researcher partial Search test case with existing data is passed<br/>Clear button functionality in researcher search- testcase is passed <br/>No such Researcher as *****<br/>Researcher Search testcase with  non existing data is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.dreamorbit.scripts.AddResearcherCheck#AddResearcherCheckInValid</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">RowCount=3<br/>Trying to add researcher with invalid email iD's - testcase is passed<br/>Trying to add researcher with invalid email iD's - testcase is passed<br/>Trying to add researcher with invalid email iD's - testcase is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
