--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,106 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="686d7f">  <td>19/11/12 21:49:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/11/12 21:49:26</td>   <td>21093</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/11/12 21:47:54</td>   <td>-70699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/11/12 21:49:06</td>   <td>635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@438135304</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>19/11/12 21:48:02</td>   <td>-62638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchResearcher.searchResearcherValid()[pri:18, instance:com.dreamorbit.scripts.TestSearchResearcher@6321e813]">searchResearcherValid</td> 
-  <td>main@438135304</td>   <td></td> </tr>
-<tr bgcolor="ebc39e">  <td>19/11/12 21:49:15</td>   <td>9782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ParticipantsLinkNavigationCheck.testValidlogin()[pri:19, instance:com.dreamorbit.scripts.ParticipantsLinkNavigationCheck@79be0360]">testValidlogin</td> 
-  <td>main@438135304</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/14 18:13:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckInValid()[pri:13, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">AddResearcherCheckInValid</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="9963d8">  <td>19/11/14 18:12:57</td>   <td>-27109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckValid()[pri:12, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">AddResearcherCheckValid</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/11/14 18:11:42</td>   <td>-101393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.ForgotPWDNavigationFlowCheck()[pri:7, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">ForgotPWDNavigationFlowCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>19/11/14 18:10:10</td>   <td>-193751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTokenToggleBTN.VerifyTokenCheck()[pri:13, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">VerifyTokenCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:07:06</td>   <td>-378026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:07:44</td>   <td>-339393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:08:04</td>   <td>-319605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:09:14</td>   <td>-249632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:09:38</td>   <td>-226240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:10:02</td>   <td>-201473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:10:37</td>   <td>-167187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:07</td>   <td>-137050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:34</td>   <td>-109320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:43</td>   <td>-100953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:11</td>   <td>-72582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:40</td>   <td>-43333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:49</td>   <td>-34873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:13:16</td>   <td>-7890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:13:52</td>   <td>28503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:14:23</td>   <td>58749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:14:31</td>   <td>67350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/11/14 18:12:19</td>   <td>-64691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPasswordInValid()[pri:9, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPasswordInValid</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/11/14 18:11:51</td>   <td>-93237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPasswordValid()[pri:8, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPasswordValid</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>19/11/14 18:12:49</td>   <td>-35254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPwdTologinNavigationChk()[pri:10, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPwdTologinNavigationChk</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="a2a371">  <td>19/11/14 18:09:45</td>   <td>-218658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationCheckUploadsLink.jsonDownloadCheck()[pri:20, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">jsonDownloadCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="abee69">  <td>19/11/14 18:10:45</td>   <td>-159226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalInfoDecrypt.jsonDownloadCheck()[pri:21, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">jsonDownloadCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:06:20</td>   <td>-423995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:07:06</td>   <td>-377367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:07:45</td>   <td>-338771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:08:05</td>   <td>-318987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:09:15</td>   <td>-249025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:09:38</td>   <td>-225621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:10:03</td>   <td>-200843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:10:37</td>   <td>-166563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:07</td>   <td>-136435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:35</td>   <td>-108699</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:11:44</td>   <td>-100287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:12</td>   <td>-71962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:41</td>   <td>-42696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:12:50</td>   <td>-34244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:13:17</td>   <td>-7274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:13:53</td>   <td>29165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/11/14 18:14:23</td>   <td>59416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>19/11/14 18:06:31</td>   <td>-412373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationCheckOnDrawerOptions.navigationFlowCheck()[pri:11, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">navigationFlowCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="ebc39e">  <td>19/11/14 18:09:22</td>   <td>-241667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestResetPasswordValid.rstpwdVerification()[pri:3, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">rstpwdVerification</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="fa9a9d">  <td>19/11/14 18:08:12</td>   <td>-311477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchResearcher.searchResearcherValid()[pri:18, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">searchResearcherValid</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="6ba0ac">  <td>19/11/14 18:07:52</td>   <td>-331591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DecryptParticipantsVerification.testDecryptParticipants()[pri:19, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">testDecryptParticipants</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="6ca8ac">  <td>19/11/14 18:11:14</td>   <td>-129601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestInvalidLogin.testInvalidlogin()[pri:2, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">testInvalidlogin</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="968ab9">  <td>19/11/14 18:14:31</td>   <td>66734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestShowHidePassword.testShowHidePWD()[pri:22, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">testShowHidePWD</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>19/11/14 18:14:02</td>   <td>38639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LabelOptionsNavigationFlowCheck.totalParticipantNavigationCheck()[pri:14, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">totalParticipantNavigationCheck</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="9b92d7">  <td>19/11/14 18:07:14</td>   <td>-369941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutVerification.verifyLogout()[pri:15, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">verifyLogout</td> 
+  <td>main@1253946629</td>   <td></td> </tr>
 </table>
