commit on 18 nov

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,393</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">88,825</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.AddResearcherCheck</td><td><a href="#m0">AddResearcherCheckInValid</a></td><td rowspan="1">1573824848292</td><td rowspan="1">30654</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dreamorbit.scripts.TestNotification</td><td><a href="#m0">setNotification</a></td><td rowspan="1">1574017441573</td><td rowspan="1">54142</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.dreamorbit.scripts.AddResearcherCheck#AddResearcherCheckInValid</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">RowCount=3<br/>Trying to add researcher with invalid email iD's - testcase is passed<br/>Trying to add researcher with invalid email iD's - testcase is passed<br/>Trying to add researcher with invalid email iD's - testcase is passed</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.dreamorbit.scripts.TestNotification#setNotification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
