--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>RowCount=3</td></tr>
-<tr><td>Trying to add researcher with invalid email iD's - testcase is passed</td></tr>
-<tr><td>Trying to add researcher with invalid email iD's - testcase is passed</td></tr>
-<tr><td>Trying to add researcher with invalid email iD's - testcase is passed</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
