--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,51 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Researcher page navigation testcase is passed</td></tr>
-<tr><td>Rating page navigation testcase is passed</td></tr>
-<tr><td>Studies page navigation testcase is passed</td></tr>
-<tr><td>AuditResearcher page navigation testcase is passed</td></tr>
-<tr><td>Logout Cancel button functionality is passed</td></tr>
-<tr><td>Logout success testcase is passed</td></tr>
-<tr><td>Participants Link Navigation under Actions testcase is  passed</td></tr>
-<tr><td>Decrypt Participants in list testcase with valid symmetric key is Passed</td></tr>
-<tr><td>Decrypt Participants button is Disabled, testcase is Passed</td></tr>
-<tr><td>Researcher exact Search test case with existing data is passed</td></tr>
-<tr><td>auto111</td></tr>
-<tr><td>Researcher partial Search test case with existing data is passed</td></tr>
-<tr><td>Clear button functionality in researcher search- testcase is passed </td></tr>
-<tr><td>No such Researcher as *****</td></tr>
-<tr><td>Researcher Search testcase with  non existing data is passed</td></tr>
-<tr><td>Reset password testcase with valid data is passed</td></tr>
-<tr><td>4 Uploads</td></tr>
-<tr><td>true</td></tr>
-<tr><td>Navigation flow on 4 Uploads link click testcase is passed</td></tr>
-<tr><td>Verify token updated successfully</td></tr>
-<tr><td>4 Uploads</td></tr>
-<tr><td>Personal info decrypt through 4 Uploads uploads testcase via  is passed</td></tr>
-<tr><td>RowCount=3</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>Invalid login verification testcase is passed</td></tr>
-<tr><td>https://qa-stanford.phaware.global/forgot_password</td></tr>
-<tr><td>ForgotPWDNavigationFlowCheck testcase is passed</td></tr>
-<tr><td>RowCount=2</td></tr>
-<tr><td>Verification code sent to your Email address</td></tr>
-<tr><td>Forgot password test case with valid data is passed</td></tr>
-<tr><td>Verification code sent to your Email address</td></tr>
-<tr><td>Forgot password test case with valid data is passed</td></tr>
-<tr><td>RowCount=2</td></tr>
-<tr><td>You must had login once. Before resetting your password.</td></tr>
-<tr><td>Forgot password test case with Invalid data is passed</td></tr>
-<tr><td>Email not found.</td></tr>
-<tr><td>Forgot password test case with Invalid data is passed</td></tr>
-<tr><td>https://qa-stanford.phaware.global/signin</td></tr>
-<tr><td>Login link in forgot password is working as expected</td></tr>
-<tr><td>Researcher added successfully.</td></tr>
-<tr><td>Add Researcher test case is passed</td></tr>
-<tr><td>Copy reseracher sKey to clip board test case is passed</td></tr>
-<tr><td>RowCount=3</td></tr>
-<tr><td>Trying to add researcher with invalid email iD's - testcase is passed</td></tr>
-<tr><td>TotalParticipant Navigation Check testcase is passed</td></tr>
-<tr><td>TotalResearcher Navigation Check testcase is passed</td></tr>
-<tr><td>Password is hidden on the first time input- testcase is passed</td></tr>
-<tr><td>Show Password testcase is passed</td></tr>
-<tr><td>Hide Password testcase is passed</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
