--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse--1438104162\testng-customsuite.xml</span>
+                    <span>C:\Users\vishr\AppData\Local\Temp\testng-eclipse-1677366488\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.dreamorbit.scripts.AddResearcherCheck" hash-for-method="AddResearcherCheckInValid">AddResearcherCheckInValid</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.dreamorbit.scripts.TestNotification" hash-for-method="setNotification">setNotification</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dreamorbit.scripts.AddResearcherCheck</span>
+              <span class="class-name">com.dreamorbit.scripts.TestNotification</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AddResearcherCheckInValid">
-                  </a> <!-- AddResearcherCheckInValid -->
-                  <span class="method-name">AddResearcherCheckInValid</span>
+                  <a name="setNotification">
+                  </a> <!-- setNotification -->
+                  <span class="method-name">setNotification</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,16 +135,16 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse--1438104162\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vishr\AppData\Local\Temp\testng-eclipse-1677366488\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dreamorbit.scripts.AddResearcherCheck&quot;/&gt;
+      &lt;class name=&quot;com.dreamorbit.scripts.TestNotification&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AddResearcherCheckInValid')
-data.setCell(0, 2, 'com.dreamorbit.scripts.AddResearcherCheck')
-data.setCell(0, 3, 30654);
+data.setCell(0, 1, 'setNotification')
+data.setCell(0, 2, 'com.dreamorbit.scripts.TestNotification')
+data.setCell(0, 3, 54142);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 54 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,29 +204,13 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">AddResearcherCheckInValid</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">RowCount=3</span>
-                <span class="reporter-method-output">Trying to add researcher with invalid email iD's - testcase is passed</span>
-                <span class="reporter-method-output">Trying to add researcher with invalid email iD's - testcase is passed</span>
-                <span class="reporter-method-output">Trying to add researcher with invalid email iD's - testcase is passed</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.dreamorbit.scripts.AddResearcherCheck</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">AddResearcherCheckValid</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -235,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dreamorbit.scripts.AddResearcherCheck</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.dreamorbit.scripts.TestNotification</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchAPP</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">AddResearcherCheckInValid</span>
-                <span class="method-start">8084 ms</span>
+                <span class="method-name">setNotification</span>
+                <span class="method-start">33885 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeApp</span>
-                <span class="method-start">38741 ms</span>
+                <span class="method-start">88027 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
