--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,106 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:06:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="aba872">  <td>19/11/14 18:06:31</td>   <td>11622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationCheckOnDrawerOptions.navigationFlowCheck()[pri:11, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">navigationFlowCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:07:06</td>   <td>45969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckOnDrawerOptions@6737fd8f]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:07:06</td>   <td>46628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>19/11/14 18:07:14</td>   <td>54054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutVerification.verifyLogout()[pri:15, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">verifyLogout</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:07:44</td>   <td>84602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LogoutVerification@3b084709]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:07:45</td>   <td>85224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="6ba0ac">  <td>19/11/14 18:07:52</td>   <td>92404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DecryptParticipantsVerification.testDecryptParticipants()[pri:19, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">testDecryptParticipants</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:08:04</td>   <td>104390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.DecryptParticipantsVerification@72b6cbcc]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:08:05</td>   <td>105008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="fa9a9d">  <td>19/11/14 18:08:12</td>   <td>112518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSearchResearcher.searchResearcherValid()[pri:18, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">searchResearcherValid</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:09:14</td>   <td>174363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestSearchResearcher@a7e666]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:09:15</td>   <td>174970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="ebc39e">  <td>19/11/14 18:09:22</td>   <td>182328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestResetPasswordValid.rstpwdVerification()[pri:3, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">rstpwdVerification</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:09:38</td>   <td>197755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestResetPasswordValid@68bbe345]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:09:38</td>   <td>198374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="a2a371">  <td>19/11/14 18:09:45</td>   <td>205337</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationCheckUploadsLink.jsonDownloadCheck()[pri:20, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">jsonDownloadCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:10:02</td>   <td>222522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.NavigationCheckUploadsLink@3224f60b]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:10:03</td>   <td>223152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>19/11/14 18:10:10</td>   <td>230244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTokenToggleBTN.VerifyTokenCheck()[pri:13, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">VerifyTokenCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:10:37</td>   <td>256808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.VerifyTokenToggleBTN@63e2203c]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:10:37</td>   <td>257432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="abee69">  <td>19/11/14 18:10:45</td>   <td>264769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PersonalInfoDecrypt.jsonDownloadCheck()[pri:21, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">jsonDownloadCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:07</td>   <td>286945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.PersonalInfoDecrypt@30b8a058]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:07</td>   <td>287560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="6ca8ac">  <td>19/11/14 18:11:14</td>   <td>294394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestInvalidLogin.testInvalidlogin()[pri:2, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">testInvalidlogin</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:34</td>   <td>314675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestInvalidLogin@7494e528]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:35</td>   <td>315296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/14 18:11:42</td>   <td>322602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.ForgotPWDNavigationFlowCheck()[pri:7, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">ForgotPWDNavigationFlowCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:43</td>   <td>323042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:11:44</td>   <td>323708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/14 18:11:51</td>   <td>330758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPasswordValid()[pri:8, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPasswordValid</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:11</td>   <td>351413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:12</td>   <td>352033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/14 18:12:19</td>   <td>359304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPasswordInValid()[pri:9, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPasswordInValid</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:40</td>   <td>380662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:41</td>   <td>381299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>19/11/14 18:12:49</td>   <td>388741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForgotPasswordCheck.forgotPwdTologinNavigationChk()[pri:10, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">forgotPwdTologinNavigationChk</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:49</td>   <td>389122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.ForgotPasswordCheck@4bbfb90a]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:12:50</td>   <td>389751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="9963d8">  <td>19/11/14 18:12:57</td>   <td>396886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckValid()[pri:12, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">AddResearcherCheckValid</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:13:16</td>   <td>416105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:13:17</td>   <td>416721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="9963d8">  <td>19/11/14 18:13:24</td>   <td>423995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddResearcherCheck.AddResearcherCheckInValid()[pri:13, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">AddResearcherCheckInValid</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:13:52</td>   <td>452498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.AddResearcherCheck@7c29daf3]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:13:53</td>   <td>453160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="bbfa64">  <td>19/11/14 18:14:02</td>   <td>462634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LabelOptionsNavigationFlowCheck.totalParticipantNavigationCheck()[pri:14, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">totalParticipantNavigationCheck</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:14:23</td>   <td>482744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.LabelOptionsNavigationFlowCheck@9660f4e]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:14:23</td>   <td>483411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">&gt;&gt;launchAPP</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="968ab9">  <td>19/11/14 18:14:31</td>   <td>490729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestShowHidePassword.testShowHidePWD()[pri:22, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">testShowHidePWD</td> 
-  <td>main@1253946629</td>   <td></td> </tr>
-<tr bgcolor="e98674">  <td>19/11/14 18:14:31</td>   <td>491345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestShowHidePassword@1efed156]">&lt;&lt;closeApp</td> 
-<td>&nbsp;</td>  <td>main@1253946629</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/11/17 22:04:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">&gt;&gt;launchAPP</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>19/11/17 22:04:54</td>   <td>20001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNotification.testDecryptParticipants()[pri:23, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">testDecryptParticipants</td> 
+  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/11/17 22:05:09</td>   <td>34908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestNotification@7cd62f43]">&lt;&lt;closeApp</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
 </table>
