On 25 nov from office

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,3 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Days drop down is disabled on daily schedule selection-Test case passed </td></tr>
+<tr><td>Notification is updating successfully for Daily schedule-Test case passed</td></tr>
+</table>
