--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Days drop down is disabled on daily schedule selection-Test case passed </td></tr>
-<tr><td>Notification is updating successfully for Daily schedule-Test case passed</td></tr>
+<h2>Reporter output</h2><table><tr><td>Session is saving for File downloads  is passed</td></tr>
 </table>
