--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ecdab">  <td>19/11/25 17:00:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.TestNotification@578486a3]">&gt;&gt;launchAPP</td> 
+<tr bgcolor="6ecdab">  <td>19/11/25 21:25:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchAPP()[pri:0, instance:com.dreamorbit.scripts.VerifySaveKeyForSession@578486a3]">&gt;&gt;launchAPP</td> 
 <td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
-<tr bgcolor="9b92d7">  <td>19/11/25 17:00:47</td>   <td>9183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNotification.setNotificationDaily()[pri:23, instance:com.dreamorbit.scripts.TestNotification@578486a3]">setNotificationDaily</td> 
+<tr bgcolor="9b92d7">  <td>19/11/25 21:25:48</td>   <td>9392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifySaveKeyForSession.testSaveSessionKey()[pri:28, instance:com.dreamorbit.scripts.VerifySaveKeyForSession@578486a3]">testSaveSessionKey</td> 
   <td>main@2116908859</td>   <td></td> </tr>
-<tr bgcolor="6ecdab">  <td>19/11/25 17:01:32</td>   <td>54343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.TestNotification@578486a3]">&lt;&lt;closeApp</td> 
+<tr bgcolor="6ecdab">  <td>19/11/25 21:26:11</td>   <td>32052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApp()[pri:0, instance:com.dreamorbit.scripts.VerifySaveKeyForSession@578486a3]">&lt;&lt;closeApp</td> 
 <td>&nbsp;</td>  <td>main@2116908859</td>   <td></td> </tr>
 </table>
