Commited on jan 29

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse--1340747041\testng-customsuite.xml</span>
+                    <span>C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse-1354732753\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse--1340747041\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\karthik.m\AppData\Local\Temp\testng-eclipse-1354732753\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'readingJSON')
 data.setCell(0, 2, 'com.dreamorbit.scripts.Reader')
-data.setCell(0, 3, 25591);
+data.setCell(0, 3, 41298);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 25 seconds</span>
+              <span class="suite-total-time">Total running time: 41 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,15 +208,15 @@ return data;
               <span class="reporter-method-name">readingJSON</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Json Download testcase with valid symmetric key is passed</span>
-                <span class="reporter-method-output">Current Time is available- Test case passed for current Time Json</span>
-                <span class="reporter-method-output">deviceMotioninfo is available- Test case passed for deviceMotion Json</span>
-                <span class="reporter-method-output">discardReason is available- Test case passed for discardReason Json</span>
+                <span class="reporter-method-output">Current Time key is available in the current Time Json file- Test case passed</span>
+                <span class="reporter-method-output">deviceMotioninfo key is available deviceMotion Json file- Test case passed </span>
+                <span class="reporter-method-output">discardReason key is available in discardReason Json file- Test case passed </span>
                 <span class="reporter-method-output">Items are not available under location json -Location Json level 1 test case Failed</span>
                 <span class="reporter-method-output">Pedometer JSON contains all the required keys- test case passed </span>
-                <span class="reporter-method-output">totalStepsInDay is available- Test case passed for TotalStepCountOfDay Json</span>
-                <span class="reporter-method-output">All the Summary Informations are available- Test case passed for Summary Json</span>
-                <span class="reporter-method-output">All the Survey Informations are available- Test case passed for Survey Json</span>
-                <span class="reporter-method-output">All the Weather Informations are available- Test case passed for weather Json</span>
+                <span class="reporter-method-output">totalStepsInDay key is available in TotalStepCountOfDay Json file- Test case passed </span>
+                <span class="reporter-method-output">All the Summary Informations/keys are available- Test case passed for Summary Json</span>
+                <span class="reporter-method-output">All the Survey Informations/Keys are available- Test case passed for Survey Json</span>
+                <span class="reporter-method-output">All the Weather Informations/Keys are available- Test case passed for weather Json</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -241,11 +241,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">readingJSON</span>
-                <span class="method-start">7947 ms</span>
+                <span class="method-start">8975 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeApp</span>
-                <span class="method-start">33542 ms</span>
+                <span class="method-start">50277 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
