--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,11 +1,11 @@
 <h2>Reporter output</h2><table><tr><td>Json Download testcase with valid symmetric key is passed</td></tr>
-<tr><td>Current Time is available- Test case passed for current Time Json</td></tr>
-<tr><td>deviceMotioninfo is available- Test case passed for deviceMotion Json</td></tr>
-<tr><td>discardReason is available- Test case passed for discardReason Json</td></tr>
+<tr><td>Current Time key is available in the current Time Json file- Test case passed</td></tr>
+<tr><td>deviceMotioninfo key is available deviceMotion Json file- Test case passed </td></tr>
+<tr><td>discardReason key is available in discardReason Json file- Test case passed </td></tr>
 <tr><td>Items are not available under location json -Location Json level 1 test case Failed</td></tr>
 <tr><td>Pedometer JSON contains all the required keys- test case passed </td></tr>
-<tr><td>totalStepsInDay is available- Test case passed for TotalStepCountOfDay Json</td></tr>
-<tr><td>All the Summary Informations are available- Test case passed for Summary Json</td></tr>
-<tr><td>All the Survey Informations are available- Test case passed for Survey Json</td></tr>
-<tr><td>All the Weather Informations are available- Test case passed for weather Json</td></tr>
+<tr><td>totalStepsInDay key is available in TotalStepCountOfDay Json file- Test case passed </td></tr>
+<tr><td>All the Summary Informations/keys are available- Test case passed for Summary Json</td></tr>
+<tr><td>All the Survey Informations/Keys are available- Test case passed for Survey Json</td></tr>
+<tr><td>All the Weather Informations/Keys are available- Test case passed for weather Json</td></tr>
 </table>
