--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -12,15 +12,15 @@
 <tr><td>Clear button functionality in researcher search- testcase is passed </td></tr>
 <tr><td>Researcher Search testcase with  non existing data is passed</td></tr>
 <tr><td>Reset password testcase with valid data is passed</td></tr>
-<tr><td>4 Uploads</td></tr>
+<tr><td>9 Uploads</td></tr>
 <tr><td>true</td></tr>
-<tr><td>Navigation flow on 4 Uploads link click testcase is passed</td></tr>
+<tr><td>Navigation flow on 9 Uploads link click testcase is passed</td></tr>
 <tr><td>Verify Token updated successfully toast is displaying-test case passed</td></tr>
 <tr><td>Verify Token OFF test case is passed</td></tr>
 <tr><td>Verify Token updated successfully toast is displaying-test case passed</td></tr>
 <tr><td>Verify Token On test case is passed</td></tr>
-<tr><td>4 Uploads</td></tr>
-<tr><td>Personal info decrypt via 4 Uploads uploads testcase is passed</td></tr>
+<tr><td>9 Uploads</td></tr>
+<tr><td>Personal info decrypt via 9 Uploads uploads testcase is passed</td></tr>
 <tr><td>Password is hidden on the first time input- testcase is passed</td></tr>
 <tr><td>Show Password testcase is passed</td></tr>
 <tr><td>Hide Password testcase is passed</td></tr>
@@ -44,6 +44,12 @@
 <tr><td>Invalid login verification testcase is passed</td></tr>
 <tr><td>Invalid login verification testcase is passed</td></tr>
 <tr><td>Invalid login verification testcase is passed</td></tr>
+<tr><td>Calculated Average rating and displayed average ratings are matching- testcase passed</td></tr>
+<tr><td>Actual displayed number of users and expected number of users are matching- testcase passed</td></tr>
+<tr><td>Session is saving for File downloads - testcase passed</td></tr>
+<tr><td>Session is saving for personal info screen- testcase passed</td></tr>
+<tr><td>Researcher added successfully.</td></tr>
+<tr><td>Session is saving for Adding researcher - Save Session Key testcase is passed</td></tr>
 <tr><td>Forgot password button NavigationFlowCheck- Testcase is passed</td></tr>
 <tr><td>Forgot password feature with valid data is working as expected- Testcase is passed</td></tr>
 <tr><td>Back navigation from Reset Password screen is working as expected - Testcase is passed</td></tr>
@@ -53,7 +59,17 @@
 <tr><td>Researcher is getting added successfully- Test case is passed</td></tr>
 <tr><td>Copy reseracher sKey to clip board -Test case is passed</td></tr>
 <tr><td>Trying to add researcher with invalid email iD's - Testcase is passed</td></tr>
-<tr><td>4 Uploads</td></tr>
+<tr><td>Json Download testcase with valid symmetric key is passed</td></tr>
+<tr><td>Current Time key is available in the current Time Json file- Test case passed</td></tr>
+<tr><td>deviceMotioninfo key is available deviceMotion Json file- Test case passed </td></tr>
+<tr><td>discardReason key is available in discardReason Json file- Test case passed </td></tr>
+<tr><td>Items are not available under location json -Location Json level 1 test case Failed</td></tr>
+<tr><td>Pedometer JSON contains all the required keys- test case passed </td></tr>
+<tr><td>totalStepsInDay key is available in TotalStepCountOfDay Json file- Test case passed </td></tr>
+<tr><td>All the Summary Informations/keys are available- Test case passed for Summary Json</td></tr>
+<tr><td>All the Survey Informations/Keys are available- Test case passed for Survey Json</td></tr>
+<tr><td>All the Weather Informations/Keys are available- Test case passed for weather Json</td></tr>
+<tr><td>9 Uploads</td></tr>
 <tr><td>Viewed Participant Details under Audit recorded- testcase passed</td></tr>
 <tr><td>Viewed Participant Uploads under Audit recorded- testcase passed</td></tr>
 <tr><td>Viewed Participant Listing activity under Audit recorded- testcase passed</td></tr>
